# aeropredict

./: .env.example  .gitignore  AeroPredict_Presentacion_Inversores.pptx  LICENSE  README.md  REQUERIMIENTOS FUNCIONALES Y NO FUNCIONALES.docx  REQUERIMIENTOS_EXTRACTED.md  docker-compose.monitoring.yml  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: aena-infovuelos-hourly.yml  model-training.yml  pipeline.yml
.omo/: boulder.json
docs/: analisis_prediccion_retrasos.md  ml_feature_selection.md  ml_hpo_results.md  ml_target_definition.md  model_card_delay_predictor.md  mongo_schema.md
models/: baseline_metrics.json  baseline_model.txt  best_params.json  hpo_results.json
scripts/: bronze_to_silver.py  build_feature_store.py  collect_aena_infovuelos.py  collect_schedules.py  collect_weather.py  construct_target.py  daily_extract.py  evaluate_predictions.py  export_ml_dataset.py  extract_to_bronze.py  feature_analysis.py  hpo_sweep.py  import_aircraft_db.py  migrate_silver.py  migrate_to_r2.py  mock_extract_to_bronze.py  register_model.py  sample_flights.py  silver_to_gold.py  silver_to_gold_entities.py  split_dataset.py  sync_r2_to_local.py  train_baseline.py  train_baseline_helpers.py
tests/: conftest.py  test_api_integration.py  test_bronze_to_silver.py  test_config.py  test_data_quality.py  test_entities.py  test_extract_flights.py  test_extract_to_bronze.py  test_feature_completeness.py  test_feature_store.py  test_models.py  test_schemas.py  test_silver_to_gold.py  test_storage_gold.py  test_storage_silver.py  test_validators.py
(+118 files in other folders)
